@@ -1,5 +1,8 @@
 2006-08-18  Scott James Remnant  <scott@netsplit.com>
 
+	* init/control.c (control_cb): Rename to control_watcher
+	* init/tests/test_control.c: Update function names.
+
 	* TODO: Update.
 
 	* Makefile.am (SUBDIRS): Install the rc.d files.
